<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculationActivity" >

    <EditText
        android:id="@+id/etSubTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/etSubTotalAmountTextFieldHint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn20PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15PercentTip"
        android:layout_alignBottom="@+id/btn15PercentTip"
        android:layout_alignRight="@+id/etSubTotalAmount"
        android:onClick="tipButtonPressed"
        android:text="@string/tip_20_percent_btn_label" />

    <Button
        android:id="@+id/btn15PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSubTotalAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:onClick="tipButtonPressed"
        android:text="@string/tip_15_percent_btn_label" />

    <Button
        android:id="@+id/btn10PercentTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15PercentTip"
        android:layout_alignBottom="@+id/btn15PercentTip"
        android:layout_alignLeft="@+id/etSubTotalAmount"
        android:onClick="tipButtonPressed"
        android:text="@string/tip_10_percent_btn_label" />

    <TextView
        android:id="@+id/etTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn15PercentTip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:text="@string/etTipAmountLabelPreText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:width="150dp" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10PercentTip"
        android:layout_alignRight="@+id/btn20PercentTip"
        android:layout_below="@+id/btn20PercentTip"
        android:layout_marginTop="27dp" />

</RelativeLayout>